Added validator controller unit tests and removed unused plugins from pom